# Real-Time-Anomaly-Detection-Dashboard

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
examples/: sample_data.csv  sample_data.json  sample_data.txt  sample_events.jsonl
src/anomaly/: __init__.py  alerts.py  api.py  config.py  detector.py  email_sender.py  ingest.py  main.py  models.py  persistence.py  processor.py  window.py
src/anomaly/dashboard_static/: index.html
src/tests/: __init__.py  test_api.py  test_detector.py  test_ingest.py  test_models.py  test_processor_integration.py  test_window.py
