[project]
name = "realtime-anomaly"
version = "0.1.0"
description = "Real-Time Anomaly Detection System using pure algorithmic approaches"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Anomaly Detection Team"}
]
dependencies = [
    "fastapi==0.95.2",
    "uvicorn[standard]==0.22.0",
    "confluent-kafka==2.2.0",
    "redis==5.0.10",
    "pydantic==1.10.11",
    "pytest==7.4.0",
    "pytest-asyncio==0.21.0",
    "httpx==0.24.1",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
